@@ -4,6 +4,7 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.5
 
 	- Documentation fixes (STR #3542)
+	- The mailto notifier could get into an infinite loop (STR #3609)
 	- Date/time information was not shown in banner pages.
 	- Relational operators were broken in #if/#elif/#else/#endif expressions
 	  for the PPD compiler.
